--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,16 +6,34 @@
         xmlns:local="clr-namespace:StackPanel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <StackPanel>
-        <TextBlock HorizontalAlignment="Center" Margin="20" Text="Hello world"/>
-        
-        <ListBox Height="100" Width="100">
-            <ListBoxItem Content="item 1"/>
-            <ListBoxItem Content="item 2"/>
-            <ListBoxItem Content="item 3"/>
-        </ListBox>
-        
-        <Button Content="Click Me" Click="ButtonBase_OnClick"></Button>
+    <Grid>
+      <!-- ~1~ <Button Content="Click Me" Click="ButtonBase_OnClick" Height="100" Width="150"></Button> @1@ -->
+      <!-- <Button Content="Click Me this"  MouseUp="UIElement_OnMouseUp" Height="100" Width="150"></Button> -->
 
-    </StackPanel>
+      <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="2*"/>
+          <ColumnDefinition Width="3*"/>
+          <!-- <ColumnDefinition Width="*"/> -->
+      </Grid.ColumnDefinitions>
+      
+      <Grid.RowDefinitions>
+          <RowDefinition Height="*"/> 
+          <RowDefinition Height="0.1*"/>
+          <!-- <RowDefinition Height="*"/>  -->
+      </Grid.RowDefinitions>
+      
+      <!-- <Button Grid.Column="0" Background="Blue">1</Button> -->
+      <StackPanel Background="Blue">
+          <Button Grid.Column="0" Background="White" Margin="2" >1</Button>
+          <Button Grid.Column="0" Background="White" Margin="2" >1</Button>
+          <Button Grid.Column="0" Background="White" Margin="2" >1</Button>
+          <Button Grid.Column="0" Background="White" Margin="2" >1</Button>
+      </StackPanel>
+      
+      <StackPanel Background="Aquamarine" Grid.Column="1"></StackPanel>
+      <StackPanel Background="Gray" Grid.Row="1" Grid.ColumnSpan="2"></StackPanel>
+      <!-- <Button Grid.Column="1" >2</Button> -->
+      <!-- <Button Grid.Column="0" Grid.Row="1">3</Button> -->
+      <!-- <Button Grid.Column="1" Grid.Row="1">4</Button> -->
+    </Grid>
 </Window>
